styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;700&display=swap');
* {
    padding: 0;
    margin: 0;
}

 :root {
    --cyan: hsl(179, 62%, 43%);
    --yellow: hsl(71, 73%, 54%);
    --gray: hsl(204, 43%, 93%);
    --blue: hsl(218, 22%, 67%);
}

html {
    background-color: var(--gray);
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: auto;
    min-height: 100vh;
    width: 100%;
    overflow: hidden;
    font-family: 'Karla', sans-serif;
    font-size: 16px;
    font-weight: 400;
    line-height: 1.5em;
}


/* STRUCTURE */

.main-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    margin: 3rem;
    width: 75ch;
    border-radius: 10px;
    box-shadow: 1px 5px 20px 5px rgba(152, 166, 189, 0.2);
}

.join {
    background-color: white;
    grid-column: 1 / 3;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    padding: 2.5rem;
}

.subscription {
    background-color: var(--cyan);
    border-bottom-left-radius: 5px;
    padding: 3rem 0 0 2.5rem;
}

.why-us {
    background-color: var(--cyan);
    opacity: 0.8;
    border-bottom-right-radius: 5px;
    padding: 3rem;
}

footer {
    text-align: center;
    margin-top: -2rem;
}


/* TEXT */

.main-title {
    font-size: 2rem;
    color: var(--cyan);
    margin-bottom: 2rem;
    letter-spacing: -1px;
}

.join h2 {
    color: var(--yellow);
    margin-bottom: 1rem;
    letter-spacing: -1px;
}

.join p {
    color: var(--blue);
    font-size: 1.1em;
}

.subscription {
    color: white;
    padding-right: 2.5rem;
}

.sub-cost {
    color: var(--gray);
    font-size: 1.2em;
    font-weight: 200;
    padding: 1.8rem 2rem 1rem 0;
}

.sub-cost-currency {
    font-weight: 700;
    font-size: 2.5rem;
    vertical-align: middle;
    color: white;
    padding-right: 0.8rem;
}

.sub-description {
    font-size: 1.1rem;
}

.why-us {
    color: white;
}

.pros-list {
    list-style: none;
    padding-top: 1.3rem;
    font-weight: 300;
    line-height: 1.4em;
}


/* BUTTON */

.sign-up {
    background-color: var(--yellow);
    color: white;
    font-family: 'Karla', sans-serif;
    font-weight: 700;
    font-size: 1.2rem;
    width: 100%;
    margin-top: 2rem;
    height: 50px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    box-shadow: 0px 6px 10px 0px #2a8b8b;
    transition: 0.2s all;
}

.sign-up:active {
    transform: scale(0.9);
    box-shadow: 0px 6px 15px 0px #2a8b8b;
}


/* LINKS */

a {
    text-decoration: none;
    color: var(--cyan);
}


/* MEDIA QUERIES (because auto-fit doesn't work for some reason) */

@media (max-width: 700px) {
    .main-grid {
        grid-template-columns: 1fr;
        width: 45ch;
    }
    .join {
        grid-column: span 1;
    }
    .sign-up {
        margin-bottom: 3rem;
    }
    .subscription {
        border-bottom-left-radius: 0;
    }
    .why-us {
        border-end-start-radius: 5px;
    }
}

